<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/blue"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/size_standard">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_standard" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/size_standard"
            android:layout_marginEnd="@dimen/size_standard"
            android:layout_marginTop="@dimen/size_standard"
            android:layout_weight="1"
            app:backgroundTint="@color/white"
            android:text="@string/search"
            android:textSize="@dimen/text_size_standard"
            android:textColor="#1A1B22"
            android:textAllCaps="false"
            app:icon="@drawable/poisk"
            app:iconGravity="textStart"
            app:iconPadding="8dp"
            app:iconTint="@color/black"
            app:cornerRadius="@dimen/size_standard"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/size_standard"
            android:layout_marginEnd="@dimen/size_standard"
            android:layout_marginTop="@dimen/size_standard"
            android:layout_weight="1"
            app:backgroundTint="@color/white"
            android:text="@string/media_library"
            android:textSize="@dimen/text_size_standard"
            android:textColor="@color/black"
            android:textAllCaps="false"
            app:icon="@drawable/mediateka"
            app:iconGravity="textStart"
            app:iconPadding="8dp"
            app:iconTint="@color/black"
            app:cornerRadius="@dimen/size_standard"/>/>
            

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/size_standard"
            android:layout_marginEnd="@dimen/size_standard"
            android:layout_marginTop="@dimen/size_standard"
            android:layout_marginBottom="@dimen/size_standard"
            android:layout_weight="1"
            app:backgroundTint="@color/white"
            android:text="@string/settings"
            android:textSize="@dimen/text_size_standard"
            android:textColor="@color/black"
            android:textAllCaps="false"
            app:icon="@drawable/nasroiki"
            app:iconGravity="textStart"
            app:iconPadding="8dp"
            app:iconTint="@color/black"
            app:cornerRadius="@dimen/size_standard"/>/>

    </LinearLayout>

</LinearLayout>